<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Video4Kids</string>
    <string name="user_details" tools:ignore="MissingTranslation">Dear Users,\n\n \"Deedani_Ha\" application is a
        collection of short
        nostalgic and memorable useful videos. Many videos on internet are not suitable for kids and,
        it is also time consuming and sometimes very challenging to find out favorit videos.
        \n\nWe have collected a handfull of attractive and useful\nvideos in five categories of:
        \n\n\"Movie\", \"Music\", \"Leam\", \"Selection\" and\n\"Explore\"\n\nAll videos are downloadable with
        possibility of blocking videos if parents find them improper for their children.\nIn order to block a video
        ,parents need to create a passcode in the security page.
        \n\nThe search tool allows users to search the keywords\nIn the title of the videos to find their favorite
        videos.
    </string>
    <string name="short_video_archive" tools:ignore="MissingTranslation">SHORT VIDEO ARCHIVE</string>

    <string name="app_logo_image" tools:ignore="MissingTranslation">App Logo Image</string>
    <string name="splash_icon_ar_name" tools:ignore="MissingTranslation">برای بزر\nگتر‌ها </string>
    <string name="language_selection" tools:ignore="MissingTranslation">LANGUAGE SELECTION</string>
    <string name="video_kid_shared_pref" tools:ignore="MissingTranslation">VideoKidPrefs</string>
    <string name="english_name" tools:ignore="MissingTranslation">ENGLISH</string>
    <string name="arabic_name" tools:ignore="MissingTranslation">ARABIC</string>
    <string name="deedani_ha" tools:ignore="MissingTranslation">\@Deedani_Ha</string>
    <string name="contact_us" tools:ignore="MissingTranslation">Contact Us:</string>
    <string name="next">Next</string>
    <string name="searchinternet">Not Found! Please try again.</string>
    <string name="searchalert">Alert</string>
    <string name="blocked">Blocked</string>
    <string name="areyousure">Do you want to download this video on your device ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="before">You downloaded this video before!</string>
    <string name="downloding">Start Downloading ...</string>
    <string name="go_to_setting" tools:ignore="MissingTranslation">go to setting</string>
    <string name="denied_media_title" tools:ignore="MissingTranslation">Denied Permission to Store Files</string>
    <string name="denied_media_msg" tools:ignore="MissingTranslation">You denied this media permission so you can not
        store downloaded files without this
        permission please go to setting and enable storage permission
    </string>
    <string name="con_change_passcode" tools:ignore="MissingTranslation">Confirm Your Passcode</string>
    <string name="change_passcode" tools:ignore="MissingTranslation">Set Passcode</string>
    <string name="change_passcode_small" tools:ignore="MissingTranslation">Change Passcode</string>
    <string name="learn" tools:ignore="MissingTranslation">LEARN</string>
    <string name="logout" tools:ignore="MissingTranslation">LOGOUT</string>
    <string name="change_language" tools:ignore="MissingTranslation">CHANGE LANGUAGE</string>
    <string name="select_age_selection" tools:ignore="MissingTranslation">SELECT AGE SELECTION</string>
    <string name="pleasewait">Please wait…</string>
    <string name="ok">Ok</string>
    <string name="contact_us_setting" tools:ignore="MissingTranslation">CONTACT US</string>
    <string name="change_passcode_setting" tools:ignore="MissingTranslation">CHANGE PASSCODE</string>
    <string name="grown_ups_only" tools:ignore="MissingTranslation">Grown-Ups Only</string>
    <string name="to_access_please_enter_the_numbers_seven_five_seven_five" tools:ignore="MissingTranslation">To access
        please enter the numbers
    </string>
    <string name="alert_title" tools:ignore="MissingTranslation">Alert</string>
    <string name="range_children" tools:ignore="MissingTranslation">Choose the Range</string>
    <string name="children" tools:ignore="MissingTranslation">For Children</string>
    <string name="all" tools:ignore="MissingTranslation">FOR ALL</string>
    <string name="no_data" tools:ignore="MissingTranslation">Not Found! Please try again.</string>


    <string name="video" tools:ignore="MissingTranslation">Videos</string>
    <string name="musics" tools:ignore="MissingTranslation">Musics</string>
    <string name="learns" tools:ignore="MissingTranslation">Learns</string>
    <string name="favorites" tools:ignore="MissingTranslation">Favourites</string>
    <string name="explores" tools:ignore="MissingTranslation">Explores</string>
    <string name="search" tools:ignore="MissingTranslation">Please enter search text</string>
    <string name="passcode" tools:ignore="MissingTranslation">Please enter your Passcode</string>
    <string name="new_pwd" tools:ignore="MissingTranslation">Enter New Passcode</string>
    <string name="old_pwd" tools:ignore="MissingTranslation">Enter Old Passcode</string>
    <string name="perisan_new_pwd" tools:ignore="MissingTranslation">رمز عبور جدید را وارد کنید</string>
    <string name="perisan_old_pwd" tools:ignore="MissingTranslation">رمز عبور قدیمی را وارد کنید</string>
    //Anthor Language
    <string name="perisan_user" tools:ignore="MissingTranslation">کاربران عزیز، \ n \ n \ "Deedani_Ha \" نرم افزار
        مجموعه ای از کوتاه است
                فیلم های دلپذیر و خاطره انگیز مفید است. بسیاری از فیلم ها در اینترنت برای بچه ها مناسب نیستند
                همچنین زمان فیلمبرداری و گاهی اوقات بسیار دشوار برای پیدا کردن فیلمهای مورد علاقه است.
                \ n \ n ما چندین ویدیو جذاب و مفید را در پنج دسته از موارد زیر جمع آوری کرده ایم:
                \ n \ n \ "فیلم \"، \ "موسیقی \"، \ "Leam \"، \ "انتخاب \" و \ n \ "کاوش \" \ n \ n همه ویدیوها قابل
        دانلود هستند
                امکان مسدود کردن فیلم ها اگر والدین آنها را برای فرزندان خود نادرست پیدا کنند. \ n برای جلوگیری از یک
        ویدیو
                ، والدین باید کد عبور را در صفحه امنیتی ایجاد کنند.
                \ n \ n ابزار جستجو به کاربران امکان می دهد تا کلمات کلیدی را جستجو کنند \ n در عنوان ویدیو برای پیدا
        کردن ویدیوهای مورد علاقه خود.
    </string>

    <string name="perisan_deedani_ha" tools:ignore="MissingTranslation">\ @ ددیانی_ه</string>
    <string name="perisan_contact_us" tools:ignore="MissingTranslation">تماس با ما:</string>
    <string name="perisan_next" tools:ignore="MissingTranslation">بعد</string>

    <string name="perisan_change_passcode" tools:ignore="MissingTranslation">تنظیم رمز عبور</string>
    <string name="perisan_change_passcode_small" tools:ignore="MissingTranslation">تغییر رمز عبور</string>
    <string name="perisan_learn" tools:ignore="MissingTranslation">فرا گرفتن</string>
    <string name="perisan_logout" tools:ignore="MissingTranslation">خروج</string>
    <string name="perisan_change_language" tools:ignore="MissingTranslation">تغییر زبان</string>
    <string name="perisan_select_age_selection" tools:ignore="MissingTranslation">سلکت اگه سلکتیون</string>
    <string name="perisan_pleasewait" tools:ignore="MissingTranslation">لطفا صبر کنید…</string>
    <string name="perisan_ok" tools:ignore="MissingTranslation">خوب</string>
    <string name="perisan_contact_us_setting" tools:ignore="MissingTranslation">تماس با ما</string>
    <string name="perisan_change_passcode_setting" tools:ignore="MissingTranslation">تغییر پدیده</string>
    <string name="perisan_grown_ups_only" tools:ignore="MissingTranslation">رشد فقط یو پی اس</string>
    <string name="perisan_to_access_please_enter_the_numbers_seven_five_seven_five" tools:ignore="MissingTranslation">
        برای دسترسی لطفا شماره را وارد
        کنید
    </string>
    <string name="perisan_alert_title" tools:ignore="MissingTranslation">هشدار</string>

    <string name="perisan_range_children" tools:ignore="MissingTranslation">محدوده را انتخاب کنید</string>
    <string name="perisan_children" tools:ignore="MissingTranslation">برای کودکان</string>
    <string name="perisan_all" tools:ignore="MissingTranslation">برای همه</string>
    <string name="perisan_no_data" tools:ignore="MissingTranslation">پیدا نشد! لطفا دوباره تلاش کنید.</string>

    <string name="perisan_video" tools:ignore="MissingTranslation">فیلم های</string>
    <string name="perisan_musics" tools:ignore="MissingTranslation">آهنگ ها</string>
    <string name="perisan_learns" tools:ignore="MissingTranslation">یاد میگیرد</string>
    <string name="perisan_favorites" tools:ignore="MissingTranslation">مورد علاقه های شما</string>
    <string name="perisan_explores" tools:ignore="MissingTranslation">کاوش می کند</string>
    <string name="perisan_search" tools:ignore="MissingTranslation">لطفا متن جستجو را وارد کنید</string>
    <string name="perisan_passcode" tools:ignore="MissingTranslation">لطفا کد عبور خود را وارد کنید</string>

    <string name="passcode_change" tools:ignore="MissingTranslation">Passcode has been changed</string>
    <string name="perisan_passcode_change" tools:ignore="MissingTranslation">گذرواژه تغییر کرده است</string>
    <string name="passcode_correct" tools:ignore="MissingTranslation">Please enter correct Passcode</string>
    <string name="perisan_passcode_correct" tools:ignore="MissingTranslation">لطفا رمز عبور صحیح را وارد کنید</string>

    <string name="sucessfully" tools:ignore="MissingTranslation">Passcode set sucessfully</string>
    <string name="perisan_sucessfully" tools:ignore="MissingTranslation">گذرواژه موفقیت آمیز است</string>
</resources>
