<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@drawable/music_bg"
        android:focusableInTouchMode="true"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black_text_color"
            android:padding="@dimen/margin_2x"
            android:text="@string/user_details"
            android:id="@+id/usertext"
            android:textSize="@dimen/margin_1.4x"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/contactTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/contact_us"
            android:textAlignment="textStart"
            android:padding="@dimen/margin_2x"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/margin_1.5x"
            app:layout_constraintTop_toBottomOf="@+id/usertext"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="start" />

        <TextView
            android:id="@+id/emailTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingStart="@dimen/margin_2x"
            android:paddingTop="@dimen/margin_2x"
            android:paddingEnd="@dimen/margin_2x"
            android:text="mansvez@gmail.com"
            android:textAlignment="textEnd"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/margin_1.5x"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usertext" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:id="@+id/tv3"
            android:paddingEnd="@dimen/margin_2x"
            android:paddingStart="@dimen/margin_2x"
            android:paddingTop="@dimen/margin_0.5x"
            android:text="@string/deedani_ha"
            android:textAlignment="textStart"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/margin_1.5x"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/emailTV"
            app:layout_constraintTop_toBottomOf="@+id/emailTV" />

        <TextView
            android:layout_width="0dp"
            android:id="@+id/helpbutton"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/contactTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ashkbarg_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="@dimen/margin_1x"
            android:text="@string/next"
            android:textAlignment="center"
            android:layout_marginStart="@dimen/margin_2x"
            android:textSize="@dimen/margin_1.5x"
            android:background="@drawable/help_next_btn_bg"
            android:layout_marginLeft="@dimen/margin_2x" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/splash_icon_ar_name"
            android:id="@+id/ashkbarg_logo"
            android:textSize="@dimen/margin_1.5x"
            android:drawablePadding="@dimen/margin_0.5x"
            app:layout_constraintBottom_toBottomOf="parent"
            android:drawableStart="@drawable/ashkbarg_logo"
            android:textColor="@color/black_text_color"
            android:textAlignment="textEnd"
            android:gravity="end|center_vertical"
            android:padding="@dimen/margin_2x"
            app:layout_constraintTop_toBottomOf="@+id/tv3"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/margin_2x"
            app:layout_constraintStart_toEndOf="@+id/helpbutton"
            android:drawableLeft="@drawable/ashkbarg_logo"
            android:layout_marginLeft="@dimen/margin_2x" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>