<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:background="@drawable/music_bg">

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/language_selection"
        android:textColor="@color/black_text_color"
        android:textSize="18dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/flagOneIV"/>

    <TextView
        android:id="@+id/langPersian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/arabian_flag"
        android:drawablePadding="@dimen/margin_2"
        android:text="@string/splash_icon_ar_name"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/margin_2x"
        android:padding="12dp"
        android:textColor="@color/black_text_color"
        android:textSize="@dimen/margin_1.5x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text1"
        app:layout_constraintBottom_toTopOf="@+id/flagTwoIV"/>

    <TextView
        android:id="@+id/langEnglish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:drawableTop="@drawable/united_kingdom"
        android:drawablePadding="@dimen/margin_2"
        android:text="@string/english_name"
        android:textAlignment="center"
        android:textColor="@color/black_text_color"
        android:textSize="@dimen/margin_1.5x"
        android:layout_marginBottom="@dimen/margin_4x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flagOneIV"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>