<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:background="@drawable/music_bg"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
       >

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="20dp"
        android:text="@string/range_children"
        android:textAllCaps="true"
        android:layout_gravity="center_horizontal" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
       >

        <ImageView
            android:id="@+id/kindChildren"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:src="@drawable/children_bg"/>

        <TextView
            android:id="@+id/txtChildren"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/children"
            android:textSize="20sp"
            android:textColor="#000"
            android:textAllCaps="true"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="14dp"
        android:gravity="center_horizontal"
        >
        <ImageView
            android:id="@+id/kindAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/for_all_bg"/>

        <TextView
            android:id="@+id/txtAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"/>
    </LinearLayout>
</LinearLayout>