<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/margin_1.5x"
    android:padding="@dimen/margin_1.5x"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/btnChangeLang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_1x"
            android:textAlignment="center"
            android:text="@string/change_language"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/margin_1.4x"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnChangeLang"/>

        <TextView
            android:id="@+id/btnChangeAge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_1x"
            android:textAlignment="center"
            android:text="@string/select_age_selection"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/margin_1.4x"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view1"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/view2"
            android:background="@color/black_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnChangeAge"/>

        <TextView
            android:id="@+id/btnChangePasscode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_1x"
            android:textAlignment="center"
            android:text="@string/change_passcode_setting"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/margin_1.4x"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/view3"
            android:background="@color/black_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnChangePasscode"/>

        <TextView
            android:id="@+id/btnContactUs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_1x"
            android:textAlignment="center"
            android:text="@string/contact_us_setting"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/margin_1.4x"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/view4"

            android:background="@color/black_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnContactUs"/>


        <TextView
            android:id="@+id/btnLogout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_1x"
            android:textAlignment="center"
            android:text="@string/logout"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/margin_1.5x"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view4"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogout"/>



    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>